Fix product detail image alignment and adjust grid row height on AquaPure Pro Water Filter page

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ h3 {
 .product-details {
   display:grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 200px 50px 280px 400px;
+  grid-template-rows: 200px 50px 300px 400px;
   grid-gap: 50px 20px;
   margin: 0px auto;
   width: 80vw;
@@ -100,6 +100,7 @@ h3 {
   grid-row: 2/3;
   padding: 20px;
   font-size: 150%;
+  width: 100%;
 }
 
 .product-detail-article {
